<resources>
    <string name="app_name">Assessment</string>

    <string-array name="countryCodes">
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+376</item>
        <item>+244</item>
        <item>+672</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+973</item>
        <item>+880</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+975</item>
        <item>+591</item>
    </string-array>
    <string name="terms_conditions">I agree with terms &amp; conditions</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="well_done">Well done you are registered!</string>
    <string name="username_must_contain">Username must contain at least 3 letters</string>
    <string name="world_infinite">World Of Infinite</string>
    <string name="brief_history">Brief History Of Creation</string>
    <string name="morning_dawns">When The Morning Dawns</string>
    <string name="create_username_text">Create Username</string>
</resources>
