<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/back_button"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_navigate_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/sign_up"
            android:id="@+id/sign_up_text"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            android:layout_marginTop="26dp"
            android:layout_marginStart="25dp"
            android:textSize="28sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/create_username_text"
            android:id="@+id/create_username_text"
            android:textColor="#3D3D3D"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="14sp"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_text"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>


    <EditText android:layout_width="match_parent" android:layout_height="60dp"
              android:id="@+id/editText_userName"
              android:layout_marginTop="10dp"
              android:textColor="@color/black"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginStart="25dp"
              android:layout_marginEnd="25dp"
              android:maxLength="20"
              android:fontFamily="sans-serif-light"
              app:layout_constraintRight_toRightOf="parent"
              android:paddingStart="20dp"
              app:layout_constraintTop_toBottomOf="@id/create_username_text"
              android:background="@drawable/edit_text_box"
    />

    <TextView
            android:text="@string/username_must_contain"
            android:textColor="#747474"
            android:id="@+id/must_contain_text"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="14sp"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toBottomOf="@id/editText_userName"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <EditText android:layout_width="match_parent" android:layout_height="60dp"
              android:id="@+id/editText_phoneNumber"
              android:layout_marginTop="10dp"
              android:textColor="@color/black"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginStart="100dp"
              android:layout_marginEnd="25dp"
              app:layout_constraintRight_toRightOf="parent"
              android:maxLength="20"
              android:paddingStart="10dp"
              android:fontFamily="sans-serif-light"
              android:inputType="phone"
              app:layout_constraintTop_toBottomOf="@id/enter_phone_number_text"
              android:background="@drawable/phone_number_edit_text_box"
    />

    <TextView
            android:text="@string/enter_phone_number"
            android:id="@+id/enter_phone_number_text"
            android:textColor="#3D3D3D"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="14sp"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toBottomOf="@id/must_contain_text"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>


    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_number_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            app:layout_constraintRight_toLeftOf="@id/editText_phoneNumber"
            android:background="@drawable/spinner_border"
            android:orientation="horizontal">

        <Spinner
                android:id="@+id/country_codes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/drop_down_arrow"/>

    </RelativeLayout>

    <ImageView
            android:src="@drawable/unchecked_checkbox"
            app:layout_constraintTop_toBottomOf="@id/editText_phoneNumber"
            android:layout_marginTop="35dp"
            android:id="@+id/terms_checkbox"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/terms_conditions"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@id/terms_checkbox"
            app:layout_constraintLeft_toRightOf="@id/terms_checkbox"
            android:layout_marginStart="9dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#747474"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>


    <Button
            android:background="@drawable/grey_cardview_border_color"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/btn_signup"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/terms_checkbox"
            app:layout_constraintBottom_toTopOf="@id/already_registered_text"
            app:layout_constraintVertical_bias="0.8"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:shadowColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="0dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent" android:layout_height="50dp"/>

    <TextView
            android:id="@+id/already_registered_text"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="sans-serif"
            app:layout_constraintHorizontal_bias="0.3"
            android:layout_marginBottom="35dp"
            android:textSize="16sp"
            android:text="@string/already_have_account"
    />

    <TextView
            app:layout_constraintLeft_toRightOf="@id/already_registered_text"
            android:text="@string/login"
            app:layout_constraintTop_toTopOf="@id/already_registered_text"
            app:layout_constraintBottom_toBottomOf="@id/already_registered_text"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#A1A1A1"
            android:id="@+id/login_text"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>