<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

    <ImageView android:layout_width="70dp"
               android:layout_height="70dp"
               android:id="@+id/k_letter"
               app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
               app:layout_constraintRight_toRightOf="@id/purple_rectangle"
               app:layout_constraintTop_toTopOf="parent"
               android:scaleType="fitCenter"
               android:cropToPadding="true"
               android:layout_marginTop="8dp"
               android:src="@drawable/k_letter"
    />

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/coral_star"
               android:src="@drawable/coral_star"
               app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
               app:layout_constraintRight_toRightOf="@id/purple_rectangle"
               app:layout_constrainedWidth="true"
               app:layout_constraintHorizontal_bias="0.8"
               app:layout_constraintTop_toBottomOf="@id/k_letter"/>
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/orange_oval"
               app:layout_constraintTop_toBottomOf="@id/coral_star"
               app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
               app:layout_constraintRight_toRightOf="@id/purple_rectangle"
               app:layout_constrainedWidth="true"
               app:layout_constraintHorizontal_bias="0.3"
               android:id="@+id/first_orange_oval"
    />

    <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/purple_rounded_rectangle"
            android:id="@+id/purple_rectangle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/first_orange_oval"
            android:layout_width="0dp" android:layout_height="170dp">

    </LinearLayout>

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/oval_lady"
               android:id="@+id/oval_lady"
               app:layout_constraintTop_toTopOf="@id/first_orange_oval"
               app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
               app:layout_constraintRight_toRightOf="@id/purple_rectangle"
    />

    <ImageView
            android:src="@drawable/white_star"
            app:layout_constraintLeft_toLeftOf="@id/first_orange_oval"
            app:layout_constraintRight_toRightOf="@id/first_orange_oval"
            app:layout_constraintTop_toBottomOf="@id/first_orange_oval"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/orange_oval"
               app:layout_constrainedWidth="true"
               app:layout_constraintLeft_toRightOf="@id/oval_lady"
               app:layout_constraintBottom_toBottomOf="@id/oval_lady"
               app:layout_constraintRight_toLeftOf="@id/coral_star"
               android:id="@+id/second_orange_oval"
    />

    <androidx.cardview.widget.CardView
            android:id="@+id/first_row" android:layout_width="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
            app:layout_constraintRight_toRightOf="@id/purple_rectangle"
            app:layout_constraintTop_toBottomOf="@id/oval_lady"
            android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:background="@drawable/orange_rounded_rectangle"
                    android:id="@+id/orange_rectangle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="41dp" android:layout_height="46dp">
            </LinearLayout>

            <TextView
                    app:layout_constraintTop_toTopOf="@id/orange_rectangle"
                    app:layout_constraintBottom_toBottomOf="@id/orange_rectangle"
                    app:layout_constraintLeft_toLeftOf="@id/orange_rectangle"
                    android:text="A"
                    android:textSize="18sp"
                    app:layout_constraintVertical_bias="0.6"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    app:layout_constraintRight_toRightOf="@id/orange_rectangle"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <ImageView
                    android:src="@drawable/menu"
                    android:id="@+id/menu_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/world_infinite"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintLeft_toRightOf="@id/orange_rectangle"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/first_row"
            app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
            app:layout_constraintRight_toRightOf="@id/purple_rectangle"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false"
            android:background="@color/grey"
            android:layout_marginLeft="20dp"
            android:id="@+id/second_row"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:elevation="6dp"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:background="@drawable/grey_rounded_rectangle"
                    android:id="@+id/grey_rectangle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="41dp" android:layout_height="46dp">
            </LinearLayout>

            <TextView
                    app:layout_constraintTop_toTopOf="@id/grey_rectangle"
                    app:layout_constraintBottom_toBottomOf="@id/grey_rectangle"
                    app:layout_constraintLeft_toLeftOf="@id/grey_rectangle"
                    android:text="B"
                    android:textSize="18sp"
                    app:layout_constraintVertical_bias="0.6"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    app:layout_constraintRight_toRightOf="@id/grey_rectangle"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <ImageView
                    android:src="@drawable/menu"
                    android:id="@+id/menu_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/brief_history"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/grey_rectangle"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/second_row"
            app:layout_constraintLeft_toLeftOf="@id/purple_rectangle"
            app:layout_constraintRight_toRightOf="@id/purple_rectangle"
            android:layout_marginLeft="20dp"
            android:id="@+id/third_row"
            app:cardCornerRadius="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_grey_gradient_rounded_rectangle"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:alpha="0.22"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:background="@drawable/grey_rounded_rectangle"
                    android:id="@+id/grey_rectangle_2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="41dp" android:layout_height="46dp">
            </LinearLayout>

            <TextView
                    app:layout_constraintTop_toTopOf="@id/grey_rectangle_2"
                    app:layout_constraintBottom_toBottomOf="@id/grey_rectangle_2"
                    app:layout_constraintLeft_toLeftOf="@id/grey_rectangle_2"
                    android:text="C"
                    android:textSize="18sp"
                    app:layout_constraintVertical_bias="0.6"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    app:layout_constraintRight_toRightOf="@id/grey_rectangle_2"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <ImageView
                    android:src="@drawable/menu"
                    android:id="@+id/menu_3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/morning_dawns"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/grey_rectangle_2"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/colar"
            android:id="@+id/colar_rectangle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_signup"
            android:layout_width="40dp" android:layout_height="8dp">

    </androidx.cardview.widget.CardView>

    <ImageView
            android:src="@drawable/grey_oval"
            app:layout_constraintRight_toLeftOf="@id/colar_rectangle"
            app:layout_constraintTop_toTopOf="@id/colar_rectangle"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/colar_rectangle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <ImageView
            android:src="@drawable/grey_oval"
            app:layout_constraintLeft_toRightOf="@id/colar_rectangle"
            app:layout_constraintTop_toTopOf="@id/colar_rectangle"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/colar_rectangle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>


    <Button
            android:background="@drawable/colar_cardview_border_color"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/btn_signup"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:shadowColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="0dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent" android:layout_height="50dp"/>


    <Button
            android:background="@drawable/white_cardview_border_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:elevation="0dp"
            android:shadowColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/black_rectangle"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colar"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="16sp"
            android:layout_width="match_parent" android:layout_height="50dp"/>


    <LinearLayout
            android:id="@+id/black_rectangle"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/black_rounded_rectangle"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="14dp"
            android:layout_width="140dp"
            android:layout_height="5dp">
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>